2021-06-29  Arcady Goldmints-Orlov  <agoldmints@igalia.com>

        [GLIB] Unreviewed test gardening, update baselines after r279169
        https://bugs.webkit.org/show_bug.cgi?id=227407

        * platform/glib/imported/w3c/web-platform-tests/content-security-policy/frame-ancestors/frame-ancestors-nested-cross-in-same-none-block-expected.txt: Removed.
        * platform/glib/imported/w3c/web-platform-tests/content-security-policy/frame-ancestors/frame-ancestors-nested-cross-in-same-self-block-expected.txt: Removed.

2021-06-29  Devin Rousso  <drousso@apple.com>

        5 media/modern-media-controls/* tests are failing constantly on Catalina
        https://bugs.webkit.org/show_bug.cgi?id=227319
        <rdar://problem/79693462>

        Unreviewed test gardening.

        * platform/mac-wk2/TestExpectations:
        Skip these tests on Catalina while the underlying issue is investigated.

2021-06-29  Ayumi Kojima  <ayumi_kojima@apple.com>

        [ BigSur ] webrtc/multi-audio.html is now flaky failing.
        https://bugs.webkit.org/show_bug.cgi?id=223043.

        Unreviewed test gardnening.

        * platform/mac/TestExpectations:

2021-06-29  Amir Mark Jr  <amir_mark@apple.com>

        [BigSur WK1] imported/w3c/web-platform-tests/media-source/mediasource-config-change-webm-v* is consistently failing.
        https://bugs.webkit.org/show_bug.cgi?id=221300.

        Unreviewed test gardening.

        Updating prior test expectations.

        * platform/mac-wk1/TestExpectations:

2021-06-29  Eric Hutchison  <ehutchison@apple.com>

        Updating test expectations for webanimations/css-transition-retargeting-during-ready-promise.html
        https://bugs.webkit.org/show_bug.cgi?id=215335

        Unreviewed test gardening

        * platform/mac-wk1/TestExpectations:
        * platform/mac/TestExpectations:

2021-06-29  Chris Dumez  <cdumez@apple.com>

        Resync service-worker WPT tests from upstream