@@ -1,4 +1,5 @@
-spec: https://w3c.github.io/speech-api/
+spec: https://wicg.github.io/speech-api/
 suggested_reviewers:
   - andrenatal
-  - gshires
+  - foolip
+  - marcoscaceres
