@@ -1,0 +1,3 @@
+
+PASS speechSynthesis.pause() and resume() state and events
+
