@@ -8,7 +8,7 @@
 async_test(t => {
   const utter = new SpeechSynthesisUtterance('1');
   utter.onerror = t.step_func_done((e) => {
-    assert_equals(e.name, "not-allowed");
+    assert_equals(e.error, "not-allowed");
   });
   utter.onend = t.step_func_done(() => assert_unreached());
   speechSynthesis.speak(utter);
