@@ -6,5 +6,7 @@ PASS new SpeechSynthesisUtterance() default volume
 PASS new SpeechSynthesisUtterance() default rate
 PASS new SpeechSynthesisUtterance() default pitch
 PASS new SpeechSynthesisUtterance("hello") text and defaults
+PASS new SpeechSynthesisUtterance(null)
+PASS new SpeechSynthesisUtterance(undefined)
 PASS SpeechSynthesisUtterance text setter
 
