@@ -6,9 +6,8 @@ if (typeof(TIMEOUT_OVERRIDE) != 'undefined') {
 GLOBAL_TIMEOUT = TIMEOUT + 2000;  // In milliseconds.
 setup({timeout: GLOBAL_TIMEOUT});
 var onstarted = false;
-var neverFireTest = async_test('Events that should not fire',
-                               {timeout: TIMEOUT});
-var onstartTest = async_test('onstart', {timeout: TIMEOUT});
+var neverFireTest = async_test('Events that should not fire');
+var onstartTest = async_test('onstart');
 var reco = new SpeechRecognition();
 
 reco.onstart = onstartTest.step_func(function(event) {
@@ -41,7 +40,7 @@ function CountTest(name, min, max) {
   this.min = min;
   this.max = max;
   this.sum = 0;
-  this.asyncTest = async_test(name, {timeout: TIMEOUT});
+  this.asyncTest = async_test(name);
 
   this.count = function(increment) { this.sum += increment; };
 
@@ -52,7 +51,7 @@ function CountTest(name, min, max) {
     this.asyncTest.step(function() {
       notes.innerHTML += cTest.name + ' occurred ' + cTest.sum + ' times.<br>';
       if (cTest.min == cTest.max) {
-        assert_true(cTest.sum == cTest.min, cTest.name + ' occurred ' +
+        assert_equals(cTest.sum, cTest.min, cTest.name + ' occurred ' +
           cTest.sum + ' times and should have occurred ' +
           cTest.min + ' times.');
       } else {
@@ -77,7 +76,7 @@ function CycleTest(name) {
   this.name = name;
   this.count = 0;  // Counts number of start / end cycles.
   this.started = false; // Tracks whether last event was a start or end event.
-  this.test = async_test(name + ' start/stop', {timeout: TIMEOUT});
+  this.test = async_test(name + ' start/stop');
 
   this.startEvent = function() {
     var cycle = this;
