@@ -1,5 +1,16 @@
 2021-06-29  Chris Dumez  <cdumez@apple.com>
 
+        Resync speech-api WPT tests from upstream
+        https://bugs.webkit.org/show_bug.cgi?id=227503
+
+        Reviewed by Sam Weinig.
+
+        Resync speech-api WPT tests from upstream a38612f39e7752c353208.
+
+        * web-platform-tests/speech-api/*: Updated.
+
+2021-06-29  Chris Dumez  <cdumez@apple.com>
+
         Resync css/cssom WPT tests from upstream
         https://bugs.webkit.org/show_bug.cgi?id=227506
 
