@@ -1,3 +1,13 @@
+2021-06-29  Chris Dumez  <cdumez@apple.com>
+
+        Resync speech-api WPT tests from upstream
+        https://bugs.webkit.org/show_bug.cgi?id=227503
+
+        Reviewed by Sam Weinig.
+
+        * platform/ios/TestExpectations:
+        * platform/mac/TestExpectations:
+
 2021-06-29  Arcady Goldmints-Orlov  <agoldmints@igalia.com>
 
         [GLIB] Unreviewed test gardening, update baselines after r279169
